[gd_scene load_steps=2 format=3 uid="uid://cbkxmbnq70d25"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_t2vip"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t2vip")

[node name="background1" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 334.0
offset_top = 356.0
offset_right = 374.0
offset_bottom = 423.0
scale = Vector2(29.225, 3.55)

[node name="ColorRect" type="ColorRect" parent="background1"]
layout_mode = 2
color = Color(0.462291, 0.462291, 0.462291, 1)

[node name="background2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 106.0
offset_right = 376.0
offset_bottom = 146.0
scale = Vector2(29.135, 4.855)

[node name="ColorRect" type="ColorRect" parent="background2"]
layout_mode = 2
color = Color(0.462291, 0.462291, 0.462291, 1)

[node name="audio" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 99.0
offset_right = 840.975
offset_bottom = 205.0
scale = Vector2(2.3, 2.3)

[node name="RichTextLabel" type="RichTextLabel" parent="audio"]
layout_mode = 2
text = "Audio:"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="audio"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="audio/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="Master_slider" type="HSlider" parent="audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/FX_slider")
focus_next = NodePath("../../HBoxContainer2/FX_slider")
focus_previous = NodePath("../../../Button")
max_value = 1.0
step = 0.001

[node name="HBoxContainer2" type="HBoxContainer" parent="audio"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="audio/HBoxContainer2"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "FX Volume"

[node name="FX_slider" type="HSlider" parent="audio/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../HBoxContainer/Master_slider")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/Music_slider")
focus_next = NodePath("../../HBoxContainer3/Music_slider")
focus_previous = NodePath("../../HBoxContainer/Master_slider")
max_value = 1.0
step = 0.001

[node name="HBoxContainer3" type="HBoxContainer" parent="audio"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="audio/HBoxContainer3"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="Music_slider" type="HSlider" parent="audio/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../HBoxContainer2/FX_slider")
focus_neighbor_bottom = NodePath("../../../customization/HBoxContainer/TankColorPick")
focus_next = NodePath("../../../customization/HBoxContainer/TankColorPick")
focus_previous = NodePath("../../HBoxContainer2/FX_slider")
max_value = 1.0
step = 0.001

[node name="customization" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 348.0
offset_right = 842.0
offset_bottom = 449.0
scale = Vector2(2.3, 2.3)

[node name="RichTextLabel" type="RichTextLabel" parent="customization"]
layout_mode = 2
size_flags_vertical = 3
text = "Customization:"

[node name="HBoxContainer" type="HBoxContainer" parent="customization"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="customization/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Change Player Color"

[node name="TankColorPick" type="ColorPickerButton" parent="customization/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../audio/HBoxContainer3/Music_slider")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/bulletColorPick")
focus_next = NodePath("../../HBoxContainer2/bulletColorPick")
focus_previous = NodePath("../../../audio/HBoxContainer3/Music_slider")
text = "uhhhh"

[node name="HBoxContainer2" type="HBoxContainer" parent="customization"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="customization/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Change Bullet Color"

[node name="bulletColorPick" type="ColorPickerButton" parent="customization/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../HBoxContainer/TankColorPick")
focus_neighbor_bottom = NodePath("../../../Button")
focus_next = NodePath("../../../Button")
focus_previous = NodePath("../../HBoxContainer/TankColorPick")
text = "uhhhh"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -444.0
offset_top = -127.0
offset_right = 55.9999
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.855, 1.855)
size_flags_vertical = 8
focus_neighbor_top = NodePath("../customization/HBoxContainer2/bulletColorPick")
focus_neighbor_bottom = NodePath("../audio/HBoxContainer/Master_slider")
focus_next = NodePath("../audio/HBoxContainer/Master_slider")
focus_previous = NodePath("../customization/HBoxContainer2/bulletColorPick")
text = "RETURN"

[connection signal="value_changed" from="audio/HBoxContainer/Master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="audio/HBoxContainer2/FX_slider" to="." method="_on_fx_slider_value_changed"]
[connection signal="value_changed" from="audio/HBoxContainer3/Music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="color_changed" from="customization/HBoxContainer/TankColorPick" to="." method="_on_color_picker_button_color_changed"]
[connection signal="popup_closed" from="customization/HBoxContainer/TankColorPick" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="color_changed" from="customization/HBoxContainer2/bulletColorPick" to="." method="_on_color_picker_button_color_changed"]
[connection signal="popup_closed" from="customization/HBoxContainer2/bulletColorPick" to="." method="_on_bullet_color_pick_popup_closed"]
[connection signal="popup_closed" from="customization/HBoxContainer2/bulletColorPick" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
